--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "firebase": "^8.6.8",
     "image-file-to-base64-exif": "^1.0.3",
+    "pusher-js": "^7.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flip-move": "^3.0.4",
